# math-utils

./: .gitignore  README.md  pyproject.toml
causal/: README.md  __init__.py  naming.py  prep.py  spec.py
causal/methods/: __init__.py  ab.py  bayes.py  did.py  result.py  uplift.py
causal/quality/: __init__.py  balance.py  distribution.py  exploration.py  result.py  stat_tests.py  trends.py
tests/: conftest.py  test_smoke.py
