[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math-utils"
version = "0.1.0"
description = "Utilitários de validação de dados para análises de causalidade em PySpark."
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4",
]

[project.optional-dependencies]
stats = [
    "scipy>=1.10",
    "numpy>=1.24",
]
viz = [
    "matplotlib>=3.7",
    "pandas>=1.5",
    "numpy>=1.24",
]
models = [
    "statsmodels>=0.14",
    "pandas>=1.5",
]
ml = [
    "scikit-learn>=1.3",
    "pandas>=1.5",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.4",
    "scipy>=1.10",
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["causal", "causal.quality", "causal.methods"]
